<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="accessibility_service_dialog_detection_description">Detects dialogs (e.g., Google Play Games profile picker) when playing games with touch mapping. Temporarily hides the overlay so you can tap dialog buttons.</string>
    <string name="add_new_profile">Add profile</string>
    <string name="all">All</string>
    <string name="already_updated">The latest version is already installed.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Game Booster +</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="assign_profile_by_game_package">Set game controller profile by game</string>
    <string name="background_auto_change">Background auto change</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_close">Close</string>
    <string name="btn_fullscreen_preview">Fullscreen preview</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="copy">Copy</string>
    <string name="credit_member_comment_bsi">Help me</string>
    <string name="credit_member_comment_jjw">Quest for Honey 🐝</string>
    <string name="credit_member_comment_jmk">Have a nice day~</string>
    <string name="credit_member_comment_jsy">game!</string>
    <string name="credit_member_comment_kej">나만 없어 고양이 😹</string>
    <string name="credit_member_comment_kjy">meow meow</string>
    <string name="credit_member_comment_ktw">For a happy gaming life!</string>
    <string name="credit_member_comment_pch">이 앱은 보안폴더에서 실행할 수 없습니다.</string>
    <string name="credit_member_comment_prm">Long journey</string>
    <string name="credit_member_name_bsi">SI Bang</string>
    <string name="credit_member_name_jjw">Jwww Jang</string>
    <string name="credit_member_name_jmk">Minky</string>
    <string name="credit_member_name_jsy">Sueyeon Jo</string>
    <string name="credit_member_name_kej">Eunji Middle Kim</string>
    <string name="credit_member_name_kjy">MOVI</string>
    <string name="credit_member_name_ktw">Wan</string>
    <string name="credit_member_name_pch">CH Park</string>
    <string name="credit_member_name_prm">rm.park</string>
    <string name="current_game_pad">Target game controller</string>
    <string name="current_profile">Edit Profile</string>
    <string name="default_error_message">Invalid input</string>
    <string name="default_popup_window_title">Pop-Up Window</string>
    <string name="default_profile">Default</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="description_aim_assist">Shows a reticle on the game screen.</string>
    <string name="description_aim_assist_warning">May not function properly if the game is not in full screen mode.</string>
    <string name="description_category_change_1">Set an unclassified game app as a game.</string>
    <string name="description_category_change_2">You can change an app to a game or a game to an app.</string>
    <string name="description_category_change_warning">If you set a non-game app as a game, the app may malfunction.</string>
    <string name="description_gamepad_remapping">You can remap the keys of the game controller to other desired keys.</string>
    <string name="description_gpu_settings">"You can change the GPU settings applied to the game through '%s' in Game Booster. It may not be effective on some devices or games."</string>
    <string name="description_update_for_supported">To improve errors or use new feature in GPU settings, you need to update the apps below.</string>
    <string name="description_update_for_unsupported">To use this feature, you need to update the apps below.</string>
    <string name="dest_title">destination title</string>
    <string name="disabled">Off</string>
    <string name="dragndroplist_drag_move">Now at position %d.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="dropdown_menu">Dropdown menu</string>
    <string name="edit">Edit</string>
    <string name="edit_buttons">Edit buttons</string>
    <string name="edit_profile">Edit profile</string>
    <string name="empty">Empty Slot</string>
    <string name="enabled">On</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="failed_to_download">Unable to download. Please check your network connection.</string>
    <string name="gamepad_a_button">A button</string>
    <string name="gamepad_b_button">B button</string>
    <string name="gamepad_direction_pad_button">D-pad</string>
    <string name="gamepad_inverse_horizontal">Inverse horizontal</string>
    <string name="gamepad_inverse_rotation">Inverse rotation</string>
    <string name="gamepad_inverse_vertical">Inverse vertical</string>
    <string name="gamepad_left_bumper_button">Left bumper</string>
    <string name="gamepad_left_stick">Left stick</string>
    <string name="gamepad_left_stick_click_button">Left stick press</string>
    <string name="gamepad_left_trigger_button">Left trigger</string>
    <string name="gamepad_right_bumper_button">Right bumper</string>
    <string name="gamepad_right_stick">Right stick</string>
    <string name="gamepad_right_stick_click_button">Right stick press</string>
    <string name="gamepad_right_trigger_button">Right trigger</string>
    <string name="gamepad_x_button">X button</string>
    <string name="gamepad_y_button">Y button</string>
    <string name="games_profile_changeable">Games with player profile customization</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="in_progress">In progress</string>
    <string name="indeterminate">Partially checked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="opacity_decrease">Decrease opacity</string>
    <string name="opacity_increase">Increase opacity</string>
    <string name="permission_accessibility_description">Without this permission, Google Play Games popups may not be tappable during gameplay.</string>
    <string name="permission_accessibility_setup_instruction">Setup: Settings > Accessibility > Installed apps > Game Booster + > Turn on</string>
    <string name="permission_notice_text">Changes the settings for gamepad layout.</string>
    <string name="permission_overlay_description">Used to display gamepad and reticle during gameplay.</string>
    <string name="permission_required">Required permissions</string>
    <string name="permission_required_accessibility">Accessibility</string>
    <string name="permission_required_nearby_devices">Nearby devices (required)</string>
    <string name="permission_required_overlay">Appear on top</string>
    <string name="permission_special_sensitive">Special and sensitive permissions</string>
    <string name="reticle_color_label">Color</string>
    <string name="reticle_opacity">Opacity</string>
    <string name="reticle_shape_label">Shape</string>
    <string name="reticle_size">Size</string>
    <string name="reticle_stroke_width">Line thickness</string>
    <string name="size_decrease">Decrease size</string>
    <string name="size_increase">Increase size</string>
    <string name="stroke_decrease">Decrease thickness</string>
    <string name="stroke_increase">Increase thickness</string>
</resources>