<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_gravity="center_horizontal"
    android:id="@id/cl_permissions_list_root"
    android:paddingBottom="20.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_permissions_list_required"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/tv_permissions_required"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/permission_required"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HoneyPlayPlus.TextAppearance.Notice_description" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="horizontal"
            android:id="@id/cl_nearby_devices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            app:layout_constraintTop_toBottomOf="@id/tv_permissions_required">
            <ImageView
                android:id="@id/iv_nearby_devices"
                android:layout_width="24.0dip"
                android:layout_height="24.0dip"
                android:src="@drawable/nearby_devices"
                android:contentDescription="@string/permission_required_nearby_devices"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cl_nearby_devices_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/cl_nearby_devices_text"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="18.0dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_nearby_devices"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_nearby_devices_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_required_nearby_devices"
                    app:layout_constraintBottom_toTopOf="@id/tv_nearby_devices_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_Title" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_nearby_devices_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_notice_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_nearby_devices_name"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_subTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/tv_permissions_special_sensitive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.0dip"
            android:text="@string/permission_special_sensitive"
            app:layout_constraintTop_toBottomOf="@id/cl_nearby_devices"
            style="@style/HoneyPlayPlus.TextAppearance.Notice_description" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/cl_overlay_permission"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            app:layout_constraintTop_toBottomOf="@id/tv_permissions_special_sensitive">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/cl_overlay_permission_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_overlay_permission_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_required_overlay"
                    app:layout_constraintBottom_toTopOf="@id/tv_overlay_permission_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_Title" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_overlay_permission_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_overlay_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_overlay_permission_name"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_subTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@id/cl_accessibility_permission"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12.0dip"
            app:layout_constraintTop_toBottomOf="@id/cl_overlay_permission">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/cl_accessibility_permission_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_accessibility_permission_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_required_accessibility"
                    app:layout_constraintBottom_toTopOf="@id/tv_accessibility_permission_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_Title" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_accessibility_permission_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_accessibility_description"
                    app:layout_constraintBottom_toTopOf="@id/tv_accessibility_permission_setup"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_accessibility_permission_name"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_subTitle" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@id/tv_accessibility_permission_setup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4.0dip"
                    android:text="@string/permission_accessibility_setup_instruction"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_accessibility_permission_description"
                    style="@style/HoneyPlayPlus.TextAppearance.Notice_subTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/cl_optional_permissions"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        app:layout_constraintTop_toBottomOf="@id/cl_permissions_list_required" />
</androidx.constraintlayout.widget.ConstraintLayout>